--- a/sass/content/_maincontainer.scss
+++ b/sass/content/_maincontainer.scss
@@ -1,12 +1,28 @@
 #content{
-    height: 350px;
+    margin: auto;
+    height: 455px;
     background: #17c2a4;
-    margin: 0;
+    
+}
+.firstelement{
+    text-align: center;
+}
+.bigtxt{
+    font-size: 40px;
+    
 }
 .elements{
+    text-align: center;
     width: 20%;
     float: left;
-    padding: 1%;
-    text-align: center;
+    margin: 1%;
+   
+}
+.elements img {
+    height: 150px;
+    width: 150px;
+}
+.p {
+    text-transform: $may;
 
 }
