--- a/sass/partials/_helpers.scss
+++ b/sass/partials/_helpers.scss
@@ -1,7 +1,7 @@
 
 .container {
     max-width: 100%;
-    //max-width: 1440px;
+    font-size: 18px;
     color: white;
     font-family: 'Titillium Web', sans-serif;
 }
