agrego elementos del footer

--- a/sass/content/_maincontainer.scss
+++ b/sass/content/_maincontainer.scss
@@ -12,6 +12,7 @@
     
 }
 .elements{
+    margin-left: 150px;
     text-align: center;
     width: 20%;
     float: left;
@@ -23,6 +24,6 @@
     width: 150px;
 }
 .p {
+    text-align: center;
     text-transform: $may;
-
 }
