--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,6 @@
+* {
+  margin: 0; }
+
 .container {
   max-width: 100%;
   font-size: 18px;
@@ -10,6 +13,9 @@ li {
 a {
   text-decoration: none;
   color: white; }
+
+.bigtxt {
+  text-transform: uppercase; }
 
 #header {
   padding: 55px;
@@ -60,6 +66,7 @@ h3 {
   font-size: 40px; }
 
 .elements {
+  margin-left: 150px;
   text-align: center;
   width: 20%;
   float: left;
@@ -70,6 +77,14 @@ h3 {
   width: 150px; }
 
 .p {
+  text-align: center;
   text-transform: uppercase; }
+
+#footer {
+  background: #3c5499;
+  height: 450px; }
+
+#footer p {
+  text-align: center; }
 
 /*# sourceMappingURL=styles.css.map */
