agrego cambios en los estilos sin responsive, falta mejorar el footer

--- a/sass/content/_header.scss
+++ b/sass/content/_header.scss
@@ -20,7 +20,7 @@ h3 {
     text-align: center;
     margin: 0 auto;
 }
-.button-header{
+.buttons{
     text-transform: $may;
     @include btn;
     background: #eb7d4b;
