--- a/sass/content/_maincontainer.scss
+++ b/sass/content/_maincontainer.scss
@@ -6,6 +6,7 @@
 }
 .firstelement{
     text-align: center;
+    padding-top: 25px;
 }
 .bigtxt{
     font-size: 40px;
@@ -23,7 +24,7 @@
     height: 150px;
     width: 150px;
 }
-.p {
+h4{
     text-align: center;
     text-transform: $may;
 }
