--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,9 @@ a {
 .bigtxt {
   text-transform: uppercase; }
 
+textarea {
+  border: 0; }
+
 #header {
   padding: 55px;
   height: 540px;
@@ -39,15 +42,17 @@ h3 {
   text-align: center;
   margin: 0 auto; }
 
-.button-header {
+.buttons {
   text-transform: uppercase;
   text-transform: uppercase;
-  height: 70px;
+  height: 50px;
+  margin: 50px;
   padding: 10px;
-  width: 295px;
+  width: 250px;
   border-radius: 5px;
   color: white;
-  font-size: 35px;
+  font-size: 25px;
+  border: 0;
   background: #eb7d4b; }
 
 .txt-btn {
@@ -60,7 +65,8 @@ h3 {
   background: #17c2a4; }
 
 .firstelement {
-  text-align: center; }
+  text-align: center;
+  padding-top: 25px; }
 
 .bigtxt {
   font-size: 40px; }
@@ -76,15 +82,59 @@ h3 {
   height: 150px;
   width: 150px; }
 
-.p {
+h4 {
   text-align: center;
   text-transform: uppercase; }
 
 #footer {
-  background: #3c5499;
-  height: 450px; }
+  background: #3c5499; }
 
 #footer p {
   text-align: center; }
+
+.links {
+  text-align: center; }
+
+.links a {
+  margin-left: 55px; }
+
+.form {
+  text-align: center;
+  max-width: 50%;
+  min-width: 50%;
+  margin: 0 auto;
+  padding: 50px; }
+
+form {
+  text-align: center;
+  box-sizing: border-box; }
+
+textarea {
+  background: #344b8e;
+  max-height: 53px;
+  min-height: 53px;
+  max-width: 35%;
+  min-width: 35%;
+  float: left;
+  margin: 10px;
+  display: inline-block;
+  box-sizing: border-box; }
+
+.last-textarea {
+  box-sizing: border-box;
+  margin: 25px;
+  float: none;
+  max-height: 150px;
+  min-height: 150px;
+  max-width: 90%;
+  min-width: 90%; }
+
+label {
+  float: left;
+  padding: 1%;
+  display: block; }
+
+.links {
+  background: #344b8e; }
 
 /*# sourceMappingURL=styles.css.map */
