--- a/sass/content/_footer.scss
+++ b/sass/content/_footer.scss
@@ -1,7 +1,53 @@
 #footer {
     background: #3c5499;
-    height: 450px;
+    //height: 450px;
 }
 #footer p {
     text-align: center;
+}
+.links{
+    text-align: center;
+    
+}
+.links a {
+    margin-left:55px; 
+}
+.form{
+    text-align: center;
+    max-width: 50%;
+    min-width: 50%;
+    margin: 0 auto;
+    padding: 50px;
+}
+form {
+    text-align: center;
+    box-sizing: border-box; 
+}
+textarea{
+    background: #344b8e;
+    max-height: 53px;
+    min-height: 53px;
+    max-width: 35%;
+    min-width: 35%;
+    float: left;
+    margin: 10px;
+    display: inline-block;
+    box-sizing: border-box;
+}
+.last-textarea{
+    box-sizing: border-box; 
+    margin: 25px;
+    float: none;
+    max-height: 150px;
+    min-height: 150px;
+    max-width: 90%;
+    min-width: 90%;
+}
+label{ 
+    float: left;
+    padding: 1%;
+    display: block;
+}
+.links {
+    background: #344b8e; 
 }
