--- a/sass/partials/_variables.scss
+++ b/sass/partials/_variables.scss
@@ -4,10 +4,12 @@ $may: uppercase;
 
 @mixin btn {
     text-transform: $may;
-    height: 70px;
+    height: 50px;
+    margin: 50px;
     padding: 10px;
-    width: 295px;
+    width: 250px;
     border-radius: 5px;
     color: white;
-    font-size: 35px;
+    font-size: 25px;
+    border: 0;
 }
