--- a/sass/content/_header.scss
+++ b/sass/content/_header.scss
@@ -24,7 +24,7 @@ h3 {
     text-transform: $may;
     @include btn;
     background: #eb7d4b;
-  
+    border-bottom: 4px solid #c05c2d;
       
 }
 .txt-btn{
