--- a/sass/content/_footer.scss
+++ b/sass/content/_footer.scss
@@ -24,6 +24,9 @@ textarea{
 .button2{
     background: #07acc2;
     border-bottom: #068b9c 4px solid;
+    &:hover{
+        background: #0bbcd3;
+    }
 }
 .links{
     text-align: center;
