--- a/css/styles.css
+++ b/css/styles.css
@@ -127,4 +127,24 @@ textarea {
 .links > a {
   margin-left: 56px; }
 
+@media (max-width: 992px) {
+  #header {
+    height: 440px; }
+
+  #content {
+    margin: 0 auto; }
+
+  .elements {
+    margin-left: 25px; }
+
+  textarea {
+    margin: 0 auto;
+    margin-right: 10px; }
+
+  label {
+    margin: 0 auto; }
+
+  #footer {
+    padding-top: 30px; } }
+
 /*# sourceMappingURL=styles.css.map */
