estilos de tablet

--- a/sass/breakpoints/_laptop.scss
+++ b/sass/breakpoints/_laptop.scss
@@ -15,7 +15,7 @@
     label{
         margin: 0 auto;
     }
-    #footer{
-        padding-top: 30px;
+    .form{
+        padding-top: 50px;
     }
 }
