--- a/css/styles.css
+++ b/css/styles.css
@@ -107,11 +107,12 @@ h4 {
   margin: 0 auto; }
 
 .elementsChildren {
-  margin: 5%;
-  float: left; }
+  float: right;
+  position: relative; }
 
 label {
-  top: 0; }
+  top: 0;
+  margin: 4px; }
 
 textarea {
   background: #273a71;
@@ -122,11 +123,8 @@ textarea {
   min-width: 60%; }
 
 .elementsChildren2 {
-  margin-top: 15px; }
-
-.last-textarea {
-  min-width: 70%;
-  max-width: 70%; }
+  margin-top: 15px;
+  position: relative; }
 
 .button2 {
   background: #07acc2;
@@ -158,7 +156,7 @@ textarea {
   label {
     margin: 0 auto; }
 
-  #footer {
-    padding-top: 30px; } }
+  .form {
+    padding-top: 50px; } }
 
 /*# sourceMappingURL=styles.css.map */
