--- a/sass/content/_header.scss
+++ b/sass/content/_header.scss
@@ -1,7 +1,7 @@
 #header{
     padding: 55px;
     height: 540px;
-    background-color: #643a79; 
+    background-color: #86509c; 
     margin:auto;  
 }
 .menu{
@@ -15,7 +15,7 @@
     text-transform: $may;
 }
 li:hover{
-    background: #7805b1;
+    background: #9925d3;
     border-radius: 3px;
 }
 h3 {
@@ -30,8 +30,7 @@ h3 {
     border-bottom: 4px solid #c05c2d;
     &:hover{
         background: #ff8952;
-    }
-      
+    }  
 }
 .txt-btn{
     margin-top: 10%;
