--- a/sass/content/_maincontainer.scss
+++ b/sass/content/_maincontainer.scss
@@ -1,24 +1,20 @@
 #content{
     margin: 0 auto;
     height: 455px;
-    background: #17c2a4;
-    
+    background: #17c2a4; 
 }
 .firstelement{
     text-align: center;
     padding-top: 25px;
 }
 .bigtxt{
-    font-size: 40px;
-    
+    font-size: 40px;   
 }
 .elements{
     margin-left: 150px;
-    text-align: center;
-    width: 20%;
+    margin: 0 auto;
+    width: 15%;
     float: left;
-    margin: 1%;
-   
 }
 .elements img {
     height: 150px;
