--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,11 @@
+.clearfix:after {
+  visibility: hidden;
+  display: block;
+  font-size: 0;
+  content: " ";
+  clear: both;
+  height: 0; }
+
 * {
   margin: 0; }
 
@@ -78,10 +86,9 @@ h3 {
 
 .elements {
   margin-left: 150px;
-  text-align: center;
-  width: 20%;
-  float: left;
-  margin: 1%; }
+  margin: 0 auto;
+  width: 15%;
+  float: left; }
 
 .elements img {
   height: 150px;
@@ -177,5 +184,27 @@ textarea {
 
   .links > a {
     margin-left: 40px; } }
+@media (max-width: 576px) {
+  .menu {
+    display: none; }
+
+  .menu :first-child {
+    display: block; }
+
+  #content {
+    height: 650px; }
+
+  .elements {
+    width: 40%;
+    float: left;
+    margin-left: 10px;
+    text-align: center; }
+
+  button {
+    height: 50px;
+    margin: 25px;
+    padding: 10px;
+    width: 225px;
+    text-align: center; } }
 
 /*# sourceMappingURL=styles.css.map */
