--- a/sass/partials/_variables.scss
+++ b/sass/partials/_variables.scss
@@ -13,3 +13,11 @@ $may: uppercase;
     font-size: 25px;
     border: 0;
 }
+.clearfix:after {
+    visibility: hidden;
+    display: block;
+    font-size: 0;
+    content: " ";
+    clear: both;
+    height: 0;
+  }
