--- a/sass/content/_maincontainer.scss
+++ b/sass/content/_maincontainer.scss
@@ -13,8 +13,9 @@
 .elements{
     margin-left: 150px;
     margin: 0 auto;
-    width: 15%;
+    width: 25%;
     float: left;
+    text-align: center;
 }
 .elements img {
     height: 150px;
