--- a/css/styles.css
+++ b/css/styles.css
@@ -87,8 +87,9 @@ h3 {
 .elements {
   margin-left: 150px;
   margin: 0 auto;
-  width: 15%;
-  float: left; }
+  width: 25%;
+  float: left;
+  text-align: center; }
 
 .elements img {
   height: 150px;
