arreglos del footer y arreglo de floats

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,9 +10,10 @@
   margin: 0; }
 
 .container {
-  max-width: 100%;
+  max-width: 1100px;
   font-size: 18px;
   color: white;
+  margin: 0 auto;
   font-family: 'Titillium Web', sans-serif; }
 
 li {
@@ -101,37 +102,39 @@ h4 {
 
 #footer {
   background: #3c5499;
-  text-align: center; }
+  text-align: center;
+  height: auto; }
 
 .form {
   margin: 150px;
-  height: 60%;
   margin: 0 auto;
-  padding-top: 50px;
-  margin-top: 150px;
-  width: 50%;
-  height: 60%;
-  margin: 0 auto; }
-
-.elementsChildren {
-  float: right;
-  position: relative; }
+  margin-top: 50px; }
 
 label {
-  top: 0;
-  margin: 4px; }
+  margin: 4px;
+  float: left; }
 
-textarea {
+input {
   background: #273a71;
   padding: 10px;
-  max-height: 40px;
-  min-height: 40px;
-  max-width: 60%;
-  min-width: 60%; }
+  height: 25px;
+  width: 200px;
+  border: 0px solid;
+  margin-top: 15px;
+  float: left; }
+
+.elementsChildren {
+  margin: 0 auto; }
 
 .elementsChildren2 {
   margin-top: 15px;
-  position: relative; }
+  text-align: center; }
+
+textarea {
+  background: #273a71;
+  margin-top: 15px;
+  height: 100px;
+  width: 300px; }
 
 .button2 {
   background: #07acc2;
@@ -144,7 +147,7 @@ textarea {
   background: #344b8e; }
 
 .links > a {
-  margin-left: 56px; }
+  margin-left: 55px; }
 
 @media (max-width: 992px) {
   #header {
