--- a/sass/partials/_helpers.scss
+++ b/sass/partials/_helpers.scss
@@ -2,10 +2,10 @@
     margin: 0;  
 }
 .container {
-    max-width: 100%;
+    max-width: 1100px;
     font-size: 18px;
     color: white;
-    
+    margin: 0 auto;
     font-family: 'Titillium Web', sans-serif;
 }
 li{
