--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,6 @@ textarea {
 
 #header {
   padding: 55px;
-  height: 540px;
   background-color: #86509c;
   margin: auto; }
 
@@ -76,6 +75,7 @@ h3 {
 #content {
   margin: 0 auto;
   height: 455px;
+  padding: 55px;
   background: #17c2a4; }
 
 .firstelement {
@@ -103,7 +103,8 @@ h4 {
 #footer {
   background: #3c5499;
   text-align: center;
-  height: auto; }
+  height: auto;
+  padding: 55px; }
 
 .form {
   margin: 150px;
@@ -111,30 +112,37 @@ h4 {
   margin-top: 50px; }
 
 label {
-  margin: 4px;
-  float: left; }
+  margin: 50px;
+  margin-left: 0; }
 
 input {
   background: #273a71;
   padding: 10px;
   height: 25px;
-  width: 200px;
+  width: 80%;
   border: 0px solid;
   margin-top: 15px;
   float: left; }
 
-.elementsChildren {
-  margin: 0 auto; }
+.elementsForm {
+  margin: 0 auto;
+  width: 49%;
+  float: left;
+  margin-bottom: 50px; }
 
-.elementsChildren2 {
-  margin-top: 15px;
+.elementsForm2 {
+  margin: 0 auto;
+  margin-top: 50px;
   text-align: center; }
+
+.elementsForm2 > div {
+  float: left; }
 
 textarea {
   background: #273a71;
   margin-top: 15px;
   height: 100px;
-  width: 300px; }
+  width: 80%; }
 
 .button2 {
   background: #07acc2;
