--- a/sass/content/_header.scss
+++ b/sass/content/_header.scss
@@ -1,7 +1,6 @@
 #header{
     padding: 55px;
-    background-color: #86509c; 
-    margin:auto;  
+    //margin:auto;  
 }
 .menu{
     float: right;
@@ -13,7 +12,7 @@
     text-transform: $may;
 }
 li:hover{
-    background: #9925d3;
+    background: #550a7a;
     border-radius: 3px;
 }
 h3 {
